<resources>
    <string name="app_name">Calculator</string>
    <string name="title_activity_calculator">Calculator</string>

    <string name="b0">0</string>
    <string name="b1">1</string>
    <string name="b2">2</string>
    <string name="b3">3</string>
    <string name="b4">4</string>
    <string name="b5">5</string>
    <string name="b6">6</string>
    <string name="b7">7</string>
    <string name="b8">8</string>
    <string name="b9">9</string>
    <string name="bDot">.</string>

    <string name="bAdd">+</string>
    <string name="bSub">−</string>
    <string name="bMul">×</string>
    <string name="bDiv">÷</string>
    <string name="bMod">%</string>

    <string name="bEq">=</string>
    <string name="bSign">±</string>

    <string name="bClear">C</string>

    <string name="error">ERROR</string>

</resources>
