<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.artem.calculator.Calculator"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:columnCount="4"
    android:rowCount="5">

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="2"
        android:layout_columnWeight="1"

        android:layout_columnSpan="4"
        android:id="@+id/text"
        android:textSize="50sp"
        android:scrollbars="vertical"
        android:text="gridlayout"

        android:gravity="bottom|end"/>

    <Button
        android:id="@+id/bClear"
        android:text="@string/bClear"
        style="@style/GridButtonStyle"
        android:onClick="onClearClicked"/>
    <Button
        android:id="@+id/bSign"
        android:text="@string/bSign"
        style="@style/GridButtonStyle"
        android:onClick="onSignClicked"/>
    <Button
        android:id="@+id/bMod"
        android:text="@string/bMod"
        style="@style/GridButtonStyle"/>
    <Button
        android:id="@+id/bDiv"
        android:text="@string/bDiv"
        style="@style/GridButtonStyle"
        android:onClick="onDivClicked"/>

    <Button
        android:id="@+id/b7"
        android:text="@string/b7"
        style="@style/GridButtonStyle"
        android:onClick="onDigitClicked"/>
    <Button
        android:id="@+id/b8"
        android:text="@string/b8"
        style="@style/GridButtonStyle"
        android:onClick="onDigitClicked"/>
    <Button
        android:id="@+id/b9"
        android:text="@string/b9"
        style="@style/GridButtonStyle"
        android:onClick="onDigitClicked"/>
    <Button
        android:id="@+id/bMul"
        android:text="@string/bMul"
        style="@style/GridButtonStyle"
        android:onClick="onMulClicked"/>

    <Button
        android:id="@+id/b4"
        android:text="@string/b4"
        style="@style/GridButtonStyle"
        android:onClick="onDigitClicked"/>
    <Button
        android:id="@+id/b5"
        android:text="@string/b5"
        style="@style/GridButtonStyle"
        android:onClick="onDigitClicked"/>
    <Button
        android:id="@+id/b6"
        android:text="@string/b6"
        style="@style/GridButtonStyle"
        android:onClick="onDigitClicked"/>
    <Button
        android:id="@+id/bSub"
        android:text="@string/bSub"
        style="@style/GridButtonStyle"
        android:onClick="onSubClicked"/>

    <Button
        android:id="@+id/b1"
        android:text="@string/b1"
        style="@style/GridButtonStyle"
        android:onClick="onDigitClicked"/>
    <Button
        android:id="@+id/b2"
        android:text="@string/b2"
        style="@style/GridButtonStyle"
        android:onClick="onDigitClicked"/>
    <Button
        android:id="@+id/b3"
        android:text="@string/b3"
        style="@style/GridButtonStyle"
        android:onClick="onDigitClicked"/>
    <Button
        android:id="@+id/bAdd"
        android:text="@string/bAdd"
        style="@style/GridButtonStyle"
        android:onClick="onAddClicked"/>

    <Button
        android:id="@+id/b0"
        android:text="@string/b0"
        style="@style/GridButtonStyle"
        android:layout_columnSpan="2"
        android:onClick="onDigitClicked"/>
    <Button
        android:id="@+id/bDot"
        android:text="@string/bDot"
        style="@style/GridButtonStyle"
        android:onClick="onDotClicked"/>
    <Button
        android:id="@+id/bEq"
        android:text="@string/bEq"
        style="@style/GridButtonStyle"
        android:onClick="onEqClicked"/>

</GridLayout>