<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.artem.calculator.Calculator"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical">

    <LinearLayout
        style="@style/RowStyle"
        android:layout_weight="2">
        <TextView
            android:layout_height="match_parent"
            android:layout_width="match_parent"

            android:id="@+id/text"
            android:textSize="50sp"
            android:text=""

            android:scrollbars="vertical"
            android:gravity="bottom|end"/>
    </LinearLayout>

    <LinearLayout
        style="@style/RowStyle">
        <Button
            android:id="@+id/bClear"
            android:text="@string/bClear"
            style="@style/ButtonStyle"
            android:layout_weight="2"
            android:onClick="onClearClicked"/>
        <Button
            android:id="@+id/bSign"
            android:text="@string/bSign"
            style="@style/ButtonStyle"
            android:onClick="onSignClicked"/>
        <!--<Button-->
        <!--android:id="@+id/bMod"-->
        <!--android:text="@string/bMod"-->
        <!--style="@style/ButtonStyle"-->
        <!--android:onClick="onModClicked"/>-->
        <Button
            android:id="@+id/bDiv"
            android:text="@string/bDiv"
            style="@style/ButtonStyle"
            android:onClick="onDivClicked"/>
    </LinearLayout>

    <LinearLayout
        style="@style/RowStyle">
        <Button
            android:id="@+id/b7"
            android:text="@string/b7"
            style="@style/ButtonStyle"
            android:onClick="onDigitClicked"/>
        <Button
            android:id="@+id/b8"
            android:text="@string/b8"
            style="@style/ButtonStyle"
            android:onClick="onDigitClicked"/>
        <Button
            android:id="@+id/b9"
            android:text="@string/b9"
            style="@style/ButtonStyle"
            android:onClick="onDigitClicked"/>
        <Button
            android:id="@+id/bMul"
            android:text="@string/bMul"
            style="@style/ButtonStyle"
            android:onClick="onMulClicked"/>
    </LinearLayout>

    <LinearLayout
        style="@style/RowStyle">
        <Button
            android:id="@+id/b4"
            android:text="@string/b4"
            style="@style/ButtonStyle"
            android:onClick="onDigitClicked"/>
        <Button
            android:id="@+id/b5"
            android:text="@string/b5"
            style="@style/ButtonStyle"
            android:onClick="onDigitClicked"/>
        <Button
            android:id="@+id/b6"
            android:text="@string/b6"
            style="@style/ButtonStyle"
            android:onClick="onDigitClicked"/>
        <Button
            android:id="@+id/bSub"
            android:text="@string/bSub"
            style="@style/ButtonStyle"
            android:onClick="onSubClicked"/>
    </LinearLayout>

    <LinearLayout
        style="@style/RowStyle">
        <Button
            android:id="@+id/b1"
            android:text="@string/b1"
            style="@style/ButtonStyle"
            android:onClick="onDigitClicked"/>
        <Button
            android:id="@+id/b2"
            android:text="@string/b2"
            style="@style/ButtonStyle"
            android:onClick="onDigitClicked"/>
        <Button
            android:id="@+id/b3"
            android:text="@string/b3"
            style="@style/ButtonStyle"
            android:onClick="onDigitClicked"/>
        <Button
            android:id="@+id/bAdd"
            android:text="@string/bAdd"
            style="@style/ButtonStyle"
            android:onClick="onAddClicked"/>
    </LinearLayout>

    <LinearLayout
        style="@style/RowStyle">
        <Button
            android:id="@+id/b0"
            android:text="@string/b0"
            style="@style/ButtonStyle"
            android:layout_weight="2"
            android:onClick="onDigitClicked"/>
        <Button
            android:id="@+id/bDot"
            android:text="@string/bDot"
            style="@style/ButtonStyle"
            android:onClick="onDotClicked"/>
        <Button
            android:id="@+id/bEq"
            android:text="@string/bEq"
            style="@style/ButtonStyle"
            android:onClick="onEqClicked"/>
    </LinearLayout>

</LinearLayout>
